--- a/3_1_Limits_and_Rates_of_Change.ipynb
+++ b/3_1_Limits_and_Rates_of_Change.ipynb
@@ -5,7 +5,17 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSqQkGkWencjEhI0uEy20G",
+      "collapsed_sections": [
+        "7xE4mLzAWRg-",
+        "mfV42vqCWy66",
+        "JfE-N-rwbiNf",
+        "ttmTiJ2mkika",
+        "A_J67TK0qIpN",
+        "Ef0kYzIU2KWS",
+        "mypg4xe46C-I",
+        "3gk7v9Qc7X10"
+      ],
+      "authorship_tag": "ABX9TyMfFXlUbctOvMZdAuWp9pk6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1448,7 +1458,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Remember that $\\infty$ and $-\\infty$ are ***not numbers***. They are just a way for us to discuss a function's behaviour. "
+        "Remember that $\\infty$ and $-\\infty$ are **not numbers**. They are just a way for us to discuss a function's behaviour. "
       ],
       "metadata": {
         "id": "yA8PlpdS3DBb"
