--- a/3_2_The_Derivative.ipynb
+++ b/3_2_The_Derivative.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPa7C3mtVJa17VfSwKCkmJO",
+      "authorship_tag": "ABX9TyNZZZ5pSpSV0EXVGSuH0SKx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1920,6 +1920,34 @@
           },
           "metadata": {},
           "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sym.diff(4*x**3, x, 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "o3LwMBqiVCyz",
+        "outputId": "e24d2e88-36fa-4aeb-da49-48dc9915ccc4"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24*x"
+            ],
+            "text/latex": "$\\displaystyle 24 x$"
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
